miniextendr-macros/tests/ui/module_use_glob.stderr
error: syntax not supported
 --> tests/ui/module_use_glob.rs:7:9
  |
7 |     use foo::*;
  |         ^^^
